# AdventOfCode

2022/day1/: CMakeLists.txt  source.cpp
2022/day2/: CMakeLists.txt  source_day2.cpp
2022/day3/: CMakeLists.txt  source3.cpp
2022/day4/: CMakeLists.txt  source4.cpp
2022/day5/: CMakeLists.txt  source5.cpp
2022/day6/: CMakeLists.txt  source6.cpp
2022/day7/: CMakeLists.txt  source7.cpp
2022/day8/: CMakeLists.txt  source8.cpp
2022/day9/: CMakeLists.txt  source9.cpp
